testdata/baselines/reference/compiler/quantifiedTypesNormalizedShapes.errors.txt
quantifiedTypesNormalizedShapes.ts(9,5): error TS2322: Type '{ a: { id: "a"; color: string; }; b: { id: "a"; color: string; }; }' is not assignable to type '{ a: Omit<Layer, "id"> & { id: "a"; }; b: Omit<Layer, "id"> & { id: "b"; }; }'.
  Types of property 'b' are incompatible.
    Type '{ id: "a"; color: string; }' is not assignable to type 'Omit<Layer, "id"> & { id: "b"; }'.
      Type '{ id: "a"; color: string; }' is not assignable to type '{ id: "b"; }'.
        Types of property 'id' are incompatible.
          Type '"a"' is not assignable to type '"b"'.


==== quantifiedTypesNormalizedShapes.ts (1 errors) ====
    type NormalizedRecord<T extends { id: string }> =
      <Id extends string> { [K in Id]: Omit<T, "id"> & { id: K } }
    
    interface Layer {
      id: string
      color: string
    }
    
    let layers: NormalizedRecord<Layer> = {
        ~~~~~~
!!! error TS2322: Type '{ a: { id: "a"; color: string; }; b: { id: "a"; color: string; }; }' is not assignable to type '{ a: Omit<Layer, "id"> & { id: "a"; }; b: Omit<Layer, "id"> & { id: "b"; }; }'.
!!! error TS2322:   Types of property 'b' are incompatible.
!!! error TS2322:     Type '{ id: "a"; color: string; }' is not assignable to type 'Omit<Layer, "id"> & { id: "b"; }'.
!!! error TS2322:       Type '{ id: "a"; color: string; }' is not assignable to type '{ id: "b"; }'.
!!! error TS2322:         Types of property 'id' are incompatible.
!!! error TS2322:           Type '"a"' is not assignable to type '"b"'.
      a: {
        id: "a",
        color: "green"
      },
      b: {
        id: "a", // should have been "b"
        color: "blue"
      }
    }
    